# dream-engine

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  rust-toolchain.toml
.fleet/: run.json
.github/workflows/: cd-dev.yml  cd-docs.yml  cd-editor-prod.yml  cd-editor-staging.yml  cd-review-app.yml  cd-test.yml  cd.yml  ci.yml  deploy-docs.yml  deploy-review-app.yml  deploy-web.yml  deploy.yml
crates/dream-app/: Cargo.toml
crates/dream-app/src/: app.rs  entity_js.rs  input.rs  javascript_script_component_system.rs  lib.rs  python_script_component_system.rs  scene_camera_component_system.rs  system.rs
crates/dream-app/src/default-files/: dream_py.py  script.js  script.py
crates/dream-ecs/: Cargo.toml
crates/dream-ecs/src/: component.rs  entity.rs  lib.rs  scene.rs
crates/dream-editor/: Cargo.toml
crates/dream-editor/src/: assets_panel.rs  editor.rs  inspector_panel.rs  lib.rs  menu_bar_panel.rs  renderer_controls_panel.rs  renderer_panel.rs  scene_hierarchy_panel.rs
crates/dream-fs/: Cargo.toml  build.rs
crates/dream-fs/js/: dream-fs.js
crates/dream-fs/src/: fs.rs  js_fs.rs  lib.rs
crates/dream-math/: Cargo.toml
crates/dream-math/src/: lib.rs
crates/dream-renderer/: Cargo.toml
crates/dream-renderer/src/: bloom_tech.rs  camera.rs  camera.wgsl  camera_bones_light_bind_group.rs  camera_light_bind_group.rs  camera_uniform.rs  cubemap_tech.rs  deferred_rendering_tech.rs  forward_rendering_tech.rs  gltf_loader.rs  hdr_tech.rs  image.rs  instance.rs  lib.rs  lights.rs  material.rs  model.rs  model.wgsl  path_not_found_error.rs  pbr.wgsl  pbr_bind_groups_and_layouts.rs  pbr_material_tech.rs  render_storage.rs  renderer.rs  shader.rs  shader.wgsl  shader_forward.wgsl  shader_render_deferred_result.wgsl  shader_render_lights_for_deferred.wgsl  shader_write_g_buffers.wgsl  shadow_tech.rs  skinning.rs  skinning.wgsl  skinning_bind_group.rs  texture.rs
crates/dream-renderer/src/shader/: bloom_downsample.wgsl  bloom_upsample.wgsl  camera.wgsl  compute_shader_update_skinning_vertices.wgsl  cubemap.wgsl  equirectangular_to_cubemap.wgsl  irradiance_convolution.wgsl  model.wgsl  pbr.wgsl  pbr_structs.wgsl  prefilter.wgsl  shader_bloom_create_mask.wgsl  shader_blur_horizontal.wgsl  shader_blur_vertical.wgsl  shader_forward.wgsl  shader_hdr_and_gamma.wgsl  shader_render_lights_for_deferred.wgsl  shader_write_g_buffers.wgsl  shader_write_shadow_buffer.wgsl  shadow.wgsl  skinning.wgsl
crates/dream-resource/: Cargo.toml
crates/dream-resource/src/: handle.rs  lib.rs  resource_handle.rs  resource_manager.rs
crates/dream-runner/: Cargo.toml  build.rs
crates/dream-runner/.cargo/: config.toml
crates/dream-runner/src/: lib.rs  main.rs
crates/dream-tasks/: Cargo.toml
crates/dream-tasks/js/: dream-tasks.js
crates/dream-tasks/src/: lib.rs  task_pool.rs
crates/dream-time/: Cargo.toml
crates/dream-time/src/: time.rs
crates/dream-wasm-bindgen-rayon/: Cargo.toml  README.md
crates/dream-wasm-bindgen-rayon/src/: lib.rs  workerHelpers.js  workerHelpers.no-bundler.js
crates/dream-window/: Cargo.toml
crates/dream-window/src/: lib.rs  window.rs
doc/: DEPLOYMENT.md
docs/: CNAME  DEPLOYMENT.md  DEVELOPMENT.md  package.json
docs/developer/: deployment.md  development.md
docs/src/: index.md
docs/src/.vuepress/: config.js
docs/src/.vuepress/components/Foo/: Bar.vue
docs/src/.vuepress/public/image/: logo.xcf
docs/src/developer/: README.md  deployment.md  development.md
docs/src/guide/: README.md  editor.md
docs/website/src/: index.md
docs/website/src/.vuepress/: config.js  enhanceApp.js
docs/website/src/.vuepress/components/: OtherComponent.vue  demo-component.vue
docs/website/src/guide/: README.md  using-vue.md
dream-app/: Cargo.toml
dream-app/src/: app.rs  javascript_script_component_system.rs  lib.rs  python_script_component_system.rs  system.rs
dream-application/: Cargo.toml
dream-application/src/: lib.rs  texture.rs
dream-ecs/: Cargo.toml
dream-ecs/src/: component.rs  component_system.rs  entity.rs  entityjs.rs  lib.rs  person.rs  scene.rs
dream-editor/: .gitignore  Cargo.toml
dream-editor/src/: lib.rs  main.rs
dream-fs/: Cargo.toml  build.rs
dream-fs/js/: dream-fs.js
dream-fs/src/: lib.rs
dream-math/: Cargo.toml
dream-math/src/: lib.rs
dream-renderer/: Cargo.toml
dream-renderer/src/: gltf_loader.rs  js_fs.rs  lib.rs  material.rs  model.rs  render_map_key.rs  shader.wgsl  texture.rs
dream-resource/: Cargo.toml
dream-resource/src/: lib.rs
dream-window/: Cargo.toml
dream-window/src/: window.rs
examples/blank/: cube.glb  eminence_in_shadow.rar  files.json  ice_cube.glb  scene.gltf  script.py
examples/blank/models/: RaidenMSG4ARMS.glb  SimpleSkin.glb  cube-inverted.glb  emissive-cube.glb  sphere-inverted.glb  sphere.glb
examples/blank/models/raiden_separated_textures/: raiden_separated_textures.gltf
res/: license.txt  script.js  shadow.glb  use_mask_from_this_model.rar
src/: app.rs  entity_js.rs  javascript_script_component_system.rs  lib.rs  main.rs  python_script_component_system.rs  shader.wgsl  texture.rs  window.rs
tools/: build-web.sh  run-debug.sh
web/: .gitignore  enable-threads.js  index.html  package.json  server.js  unpkg.com_comlink@4.4.1_dist_esm_comlink.mjs  util.js  wasm-worker.js
web/res/: cube.gltf  cube_sketchfab.glb
