[package]
name = "dream"
version = "0.1.0"
edition = "2021"
readme = "README.md"
keywords = ["game", "engine", "gamedev", "graphics", "dream"]
exclude = ["res/", "tools/", "web/"]
repository = "https://github.com/rdeepak2002/dream-rs"
homepage = "https://github.com/rdeepak2002/dream-rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
env_logger = "0.10"
pollster = "0.3.0"
cfg-if = { workspace = true }
winit = { workspace = true }
wgpu = { workspace = true }
egui = { workspace = true }
log = { workspace = true }
dream-editor = { workspace = true }
dream-renderer = { workspace = true }
dream-ecs = { workspace = true }
dream-math = { workspace = true }
dream-app = { workspace = true }
dream-window = { workspace = true }
dream-fs = { workspace = true }
dream-resource = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0.0"
wasm-bindgen-futures = { workspace = true }
wasm-bindgen = { workspace = true }

[build-dependencies]
fs_extra = "1.2"
serde_json = "1.0.96"
serde = { workspace = true }
cfg-if = { workspace = true }
anyhow = { workspace = true }

[workspace]
members = [
    "crates/*"
]

[workspace.dependencies]
# serialization and deserialization
serde = { version = "1.0.163", features = ["derive"] }
serde_yaml = "0.9.21"

# rendering API
wgpu = "0.16.0"

# windowing
winit = "0.28"

# logging
log = "0.4"

# singleton library
once_cell = "1.17.1"

# custom code per configuration
cfg-if = "1"

# linar algebra math
cgmath = "0.18"

# immediate gui library
egui = { version = "0.21.0", git = "https://github.com/emilk/egui.git" }

# easy conversion to plain datatypes
bytemuck = { version = "1.12", features = ["derive"] }

# easier error handling
anyhow = "1.0"

# web assembly functionalities
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"

# asynchronous tasks
async-executor = "1.5.1"

# message passing
crossbeam-channel = "0.5"

# dream sub-dependencies
dream-editor = { path = "crates/dream-editor" }
dream-renderer = { path = "crates/dream-renderer" }
dream-ecs = { path = "crates/dream-ecs" }
dream-math = { path = "crates/dream-math" }
dream-app = { path = "crates/dream-app" }
dream-window = { path = "crates/dream-window" }
dream-fs = { path = "crates/dream-fs" }
dream-resource = { path = "crates/dream-resource" }
dream-tasks = { path = "crates/dream-tasks" }