#cargo-features = ["per-package-target"]

[workspace]
resolver = "2"
members = [
    "crates/*"
]

[workspace.dependencies]
# serialization and deserialization
serde = { version = "1.0.163", features = ["derive"] }
serde_yaml = "0.9.21"

# rendering API
wgpu = "0.17.0"

# 3D model parsing
gltf = "1.1.0"

# windowing
winit = "0.28"

# logging
log = "0.4"

# singleton library
once_cell = "1.17.1"

# custom code per configuration
cfg-if = "1"

# linar algebra math
cgmath = "0.18"

# immediate gui library
egui = { version = "0.22.0", git = "https://github.com/emilk/egui.git" }

# easy conversion to plain datatypes
bytemuck = { version = "1.12", features = ["derive"] }

# easier error handling
anyhow = "1.0"

# web assembly functionalities
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"

# asynchronous tasks
async-executor = "1.5.1"

# message passing
crossbeam-channel = "0.5"

# multi-threading manager
rayon = "1.5"
wasm-bindgen-rayon = { git = "https://github.com/rdeepak2002/wasm-bindgen-rayon.git" }

# dream sub-dependencies
dream-editor = { path = "crates/dream-editor" }
dream-renderer = { path = "crates/dream-renderer" }
dream-ecs = { path = "crates/dream-ecs" }
dream-math = { path = "crates/dream-math" }
dream-app = { path = "crates/dream-app" }
dream-window = { path = "crates/dream-window" }
dream-fs = { path = "crates/dream-fs" }
dream-resource = { path = "crates/dream-resource" }
dream-tasks = { path = "crates/dream-tasks" }
dream-runner = { path = "crates/dream-runner" }
dream-time = { path = "crates/dream-time" }

default-target = "x86_64-unknown-linux-gnu"
