[package]
name = "dream-app"
version = "0.1.0"
edition = "2021"

[dependencies]
dream-math = { path = "../dream-math", version = "0.1.0" }
dream-ecs = { path = "../dream-ecs", version = "0.1.0" }
dream-renderer = { path = "../dream-renderer", version = "0.1.0" }
cfg-if = "1"
winit = "0.28"
log = "0.4"
epi = "0.17.0"
bytemuck = { version = "1.12", features = ["derive"] }
boa_engine = { version = "0.16.0", features = ["console"] }
gc = "0.4.1"
boa_gc = "0.16.0"
cgmath = "0.18"
crossbeam-channel = "0.5"
gltf = "1.1.0"
lazy_static = "1.4.0"
once_cell = "1.17.1"
rustpython-common = { git = "https://github.com/RustPython/RustPython", tag = "v0.2.0" }
rustpython-parser = { git = "https://github.com/RustPython/RustPython", tag = "v0.2.0" }
rustpython-pylib = { git = "https://github.com/RustPython/RustPython", tag = "v0.2.0", default-features = false, optional = true }
rustpython-stdlib = { git = "https://github.com/RustPython/RustPython", tag = "v0.2.0", default-features = false, optional = true }
rustpython-vm = { git = "https://github.com/RustPython/RustPython", tag = "v0.2.0", default-features = false, features = ["compiler", "encodings"] }
