[package]
name = "dream-ecs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shipyard = "0.6.2"
cgmath = "0.18"
boa_engine = { version = "0.16.0", features = ["console"]}
rapier3d = "0.17.2"
rapier2d = "0.17.2"