[package]
name = "dream-ecs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shipyard = "0.6.2"
cgmath = "0.18"
boa_engine = { version = "0.16.0", features = ["console"] }
gc = "0.4.1"
boa_gc = "0.16.0"
log = "0.4"
rapier3d = "0.17.2"
rapier2d = "0.17.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
reqwest = { version = "0.11" }
console_error_panic_hook = "0.1.6"
console_log = "1.0.0"
wgpu = { version = "0.15", features = ["webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Location",
] }