[package]
name = "dream-editor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dream-renderer = { path = "../dream-renderer", version = "0.1.0" }
cfg-if = "1"
winit = "0.28"
log = "0.4"
wgpu = "0.16.0"
egui = { version = "0.21.0", git = "https://github.com/emilk/egui.git" }
egui-winit = { version = "0.21.1", git = "https://github.com/emilk/egui.git", default-features = false, features = ["links", "wayland"] }
egui-wgpu = { version = "0.21.0", git = "https://github.com/emilk/egui.git" }
bytemuck = { version = "1.12", features = ["derive"] }
cgmath = "0.18"
