[package]
name = "dream-editor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
egui-winit = { version = "0.21.1", git = "https://github.com/emilk/egui.git", default-features = false, features = ["links", "wayland"] }
egui-wgpu = { version = "0.21.0", git = "https://github.com/emilk/egui.git" }
cfg-if = { workspace = true }
winit = { workspace = true }
cgmath = { workspace = true }
wgpu = { workspace = true }
egui = { workspace = true }
log = { workspace = true }
bytemuck = { workspace = true }
dream-renderer = { workspace = true }