[package]
name = "dream-fs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1"
anyhow = "1.0"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3.61"
wasm-bindgen-futures = "0.4.30"