[package]
name = "dream-window"
version = "0.1.0"
edition = "2021"

[dependencies]
dream-app = { path = "../dream-app", version = "0.1.0" }
dream-editor = { path = "../dream-editor", version = "0.1.0" }
dream-renderer = { path = "../dream-renderer", version = "0.1.0" }
cfg-if = "1"
winit = "0.28"
log = "0.4"
wgpu = "0.16.0"
epi = "0.17.0"
bytemuck = { version = "1.12", features = ["derive"] }
gc = "0.4.1"
cgmath = "0.18"
crossbeam-channel = "0.5"
gltf = "1.1.0"
lazy_static = "1.4.0"
once_cell = "1.17.1"
egui = { version = "0.21.0", git = "https://github.com/emilk/egui.git" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "0.16.0", features = ["webgl"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3.61", features = [
    "Window",
] }