[package]
name = "dream-app"
version = "0.1.0"
edition = "2021"

[dependencies]
gc = "0.4.1"
nalgebra = { workspace = true }
cfg-if = { workspace = true }
winit = { workspace = true }
log = { workspace = true }
dream-math = { workspace = true }
dream-ecs = { workspace = true }
dream-renderer = { workspace = true }
dream-resource = { workspace = true }
dream-tasks = { workspace = true }
dream-fs = { workspace = true }
async-executor = { workspace = true }
rayon = { workspace = true }
wasm-bindgen = { workspace = true }
anyhow = { workspace = true }

# python interpreter
rustpython-common = { git = "https://github.com/RustPython/RustPython" }
rustpython-derive = { git = "https://github.com/RustPython/RustPython" }
rustpython-pylib = { git = "https://github.com/RustPython/RustPython", default-features = false, optional = true }
rustpython-stdlib = { git = "https://github.com/RustPython/RustPython", default-features = false, optional = true }
rustpython-vm = { git = "https://github.com/RustPython/RustPython", default-features = false, features = ["compiler"] }
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-rayon = { workspace = true }