[package]
name = "dream-editor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
egui-winit = { version = "0.23.0", default-features = false, features = ["links", "wayland"] }
egui-wgpu = { version = "0.23.0" }
crossbeam-channel = { workspace = true }
cfg-if = { workspace = true }
winit = { workspace = true }
wgpu = { workspace = true }
egui = { workspace = true }
log = { workspace = true }
bytemuck = { workspace = true }
dream-renderer = { workspace = true }
dream-ecs = { workspace = true }
dream-app = { workspace = true }
