[package]
name = "dream-fs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = { workspace = true }
cfg-if = { workspace = true }
log = { workspace = true }

# web dependencies
js-sys = "0.3.61"
indexed_db_futures = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }