[package]
name = "dream-renderer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
gltf = "1.1.0"
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
anyhow = { workspace = true }
cgmath = { workspace = true }
cfg-if = { workspace = true }
winit = { workspace = true }
wgpu = { workspace = true }
log = { workspace = true }
bytemuck = { workspace = true }
dream-fs = { workspace = true }
dream-resource = { workspace = true }
async-executor = "1.5.1"
futures-lite = "1.13.0"
async-task = "4.4.0"
async-channel = "1.8.0"
concurrent-queue = "2.2.0"