[package]
name = "dream-renderer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
gltf = { workspace = true }
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
crossbeam-channel = { workspace = true }
anyhow = { workspace = true }
nalgebra = { workspace = true }
nalgebra-glm = { workspace = true }
cfg-if = { workspace = true }
winit = { workspace = true }
wgpu = { workspace = true }
log = { workspace = true }
bytemuck = { workspace = true }
dream-fs = { workspace = true }
dream-resource = { workspace = true }
dream-tasks = { workspace = true }
async-executor = { workspace = true }
rayon = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-rayon = { workspace = true }