[package]
name = "dream-renderer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
gltf = { workspace = true }
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
crossbeam-channel = { workspace = true }
anyhow = { workspace = true }
cfg-if = { workspace = true }
winit = { workspace = true }
wgpu = { workspace = true }
log = { workspace = true }
bytemuck = { workspace = true }
dream-fs = { workspace = true }
dream-resource = { workspace = true }
dream-tasks = { workspace = true }
dream-math = { workspace = true }
dream-ecs = { workspace = true }
async-executor = { workspace = true }
rayon = { workspace = true }
# compute tangents using mikktspace algorithm
mikktspace = "0.3.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-rayon = { workspace = true }