[package]
name = "dream-resource"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.3.3", features = ["v4", "fast-rng", "macro-diagnostics"] }
log = { workspace = true }
once_cell = { workspace = true }
cfg-if = { workspace = true }
dream-fs = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
