[package]
name = "dream-tasks"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = { workspace = true }
cfg-if = { workspace = true }
crossbeam-channel = { workspace = true }
once_cell = { workspace = true }
async-executor = { workspace = true }
rayon = "1.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-rayon = { git = "https://github.com/rdeepak2002/wasm-bindgen-rayon.git" }