[package]
name = "dream-tasks"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = { workspace = true }
cfg-if = { workspace = true }
crossbeam-channel = { workspace = true }
once_cell = { workspace = true }
async-executor = { workspace = true }
rayon = { workspace = true }
instant = { workspace = true }
wasm-bindgen = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-rayon = { workspace = true }